# CPS2008_netsketch

./: .gitignore  CMakeLists.txt  README.md  client.cpp  client.h  connect_server.cpp  connect_server.h  draw.h  global_client.cpp  global_client.h  global_clientb.cpp  global_clientb.h  main.cpp  server.cpp  server.h
